add steam data sample

--- a/data/steam_num_players_genres_analysis.ipynb
+++ b/data/steam_num_players_genres_analysis.ipynb
@@ -464,7 +464,7 @@
   {
    "cell_type": "code",
    "execution_count": 140,
-   "id": "chubby-pricing",
+   "id": "ready-clinton",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -482,7 +482,7 @@
   {
    "cell_type": "code",
    "execution_count": 141,
-   "id": "verbal-stations",
+   "id": "velvet-applicant",
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +556,7 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "id": "ranking-series",
+   "id": "fourth-confidentiality",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -621,7 +621,7 @@
   {
    "cell_type": "code",
    "execution_count": 147,
-   "id": "southern-simpson",
+   "id": "secondary-local",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -648,7 +648,7 @@
   {
    "cell_type": "code",
    "execution_count": 148,
-   "id": "tender-techno",
+   "id": "amino-western",
    "metadata": {
     "scrolled": false
    },
@@ -672,7 +672,7 @@
   {
    "cell_type": "code",
    "execution_count": 149,
-   "id": "civic-black",
+   "id": "incorporated-edwards",
    "metadata": {},
    "outputs": [
     {
@@ -724,7 +724,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "exciting-price",
+   "id": "moved-borough",
    "metadata": {},
    "source": [
     "## Genre"
@@ -733,7 +733,7 @@
   {
    "cell_type": "code",
    "execution_count": 150,
-   "id": "optional-leader",
+   "id": "personal-reflection",
    "metadata": {
     "scrolled": false
    },
@@ -752,7 +752,7 @@
   {
    "cell_type": "code",
    "execution_count": 151,
-   "id": "meaningful-banking",
+   "id": "limited-country",
    "metadata": {},
    "outputs": [
     {
@@ -806,7 +806,7 @@
   {
    "cell_type": "code",
    "execution_count": 152,
-   "id": "wicked-navigation",
+   "id": "distinguished-laptop",
    "metadata": {},
    "outputs": [
     {
@@ -838,7 +838,7 @@
   {
    "cell_type": "code",
    "execution_count": 153,
-   "id": "prostate-gospel",
+   "id": "induced-export",
    "metadata": {},
    "outputs": [
     {
@@ -868,8 +868,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 162,
+   "id": "stopped-sculpture",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "steam_data_df_sample = pd.DataFrame()\n",
+    "steam_data_df_sample['url'] = steam_data_df['url']\n",
+    "steam_data_df_sample['genre'] = steam_data_df['genre']\n",
+    "steam_data_df_sample['game_details'] = steam_data_df['game_details']\n",
+    "steam_data_df_sample = steam_data_df_sample.head(1000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
+   "id": "sufficient-tampa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "steam_data_df_sample.to_csv(os.path.join('steam_data', 'steam_games_sample.csv'))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "political-portland",
+   "id": "magnetic-clinic",
    "metadata": {},
    "outputs": [],
    "source": []
