change data sample

--- a/data/steam_num_players_genres_analysis.ipynb
+++ b/data/steam_num_players_genres_analysis.ipynb
@@ -868,32 +868,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 164,
    "id": "stopped-sculpture",
    "metadata": {},
    "outputs": [],
    "source": [
-    "steam_data_df_sample = pd.DataFrame()\n",
-    "steam_data_df_sample['url'] = steam_data_df['url']\n",
-    "steam_data_df_sample['genre'] = steam_data_df['genre']\n",
-    "steam_data_df_sample['game_details'] = steam_data_df['game_details']\n",
-    "steam_data_df_sample = steam_data_df_sample.head(1000)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 163,
-   "id": "sufficient-tampa",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "steam_data_df_sample = steam_data_df.head(100)\n",
     "steam_data_df_sample.to_csv(os.path.join('steam_data', 'steam_games_sample.csv'))"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 163,
+   "id": "undefined-latin",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "magnetic-clinic",
+   "id": "expensive-bangkok",
    "metadata": {},
    "outputs": [],
    "source": []
