--- a/data/steam_num_players_genres_analysis.ipynb
+++ b/data/steam_num_players_genres_analysis.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 135,
-   "id": "inappropriate-behavior",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +15,6 @@
   {
    "cell_type": "code",
    "execution_count": 136,
-   "id": "decreased-subscriber",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +24,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "determined-picnic",
    "metadata": {},
    "source": [
     "## Popular Tags Set"
@@ -35,7 +32,6 @@
   {
    "cell_type": "code",
    "execution_count": 137,
-   "id": "addressed-jacket",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +41,6 @@
   {
    "cell_type": "code",
    "execution_count": 138,
-   "id": "compliant-brunswick",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +53,6 @@
   {
    "cell_type": "code",
    "execution_count": 139,
-   "id": "clean-pasta",
    "metadata": {
     "scrolled": false
    },
@@ -455,7 +449,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "interstate-savings",
    "metadata": {},
    "source": [
     "## Number of Players"
@@ -464,7 +457,6 @@
   {
    "cell_type": "code",
    "execution_count": 140,
-   "id": "ready-clinton",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -482,7 +474,6 @@
   {
    "cell_type": "code",
    "execution_count": 141,
-   "id": "velvet-applicant",
    "metadata": {},
    "outputs": [
     {
@@ -513,7 +504,6 @@
   {
    "cell_type": "code",
    "execution_count": 142,
-   "id": "healthy-continent",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -528,7 +518,6 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "id": "bearing-gardening",
    "metadata": {
     "scrolled": false
    },
@@ -556,7 +545,6 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "id": "fourth-confidentiality",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -566,7 +554,6 @@
   {
    "cell_type": "code",
    "execution_count": 145,
-   "id": "automated-pursuit",
    "metadata": {},
    "outputs": [
     {
@@ -590,7 +577,6 @@
   {
    "cell_type": "code",
    "execution_count": 146,
-   "id": "careful-airfare",
    "metadata": {},
    "outputs": [
     {
@@ -621,7 +607,6 @@
   {
    "cell_type": "code",
    "execution_count": 147,
-   "id": "secondary-local",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -648,7 +633,6 @@
   {
    "cell_type": "code",
    "execution_count": 148,
-   "id": "amino-western",
    "metadata": {
     "scrolled": false
    },
@@ -672,7 +656,6 @@
   {
    "cell_type": "code",
    "execution_count": 149,
-   "id": "incorporated-edwards",
    "metadata": {},
    "outputs": [
     {
@@ -724,7 +707,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "moved-borough",
    "metadata": {},
    "source": [
     "## Genre"
@@ -733,7 +715,6 @@
   {
    "cell_type": "code",
    "execution_count": 150,
-   "id": "personal-reflection",
    "metadata": {
     "scrolled": false
    },
@@ -752,7 +733,6 @@
   {
    "cell_type": "code",
    "execution_count": 151,
-   "id": "limited-country",
    "metadata": {},
    "outputs": [
     {
@@ -806,7 +786,6 @@
   {
    "cell_type": "code",
    "execution_count": 152,
-   "id": "distinguished-laptop",
    "metadata": {},
    "outputs": [
     {
@@ -838,7 +817,6 @@
   {
    "cell_type": "code",
    "execution_count": 153,
-   "id": "induced-export",
    "metadata": {},
    "outputs": [
     {
@@ -869,7 +847,6 @@
   {
    "cell_type": "code",
    "execution_count": 164,
-   "id": "stopped-sculpture",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -880,7 +857,6 @@
   {
    "cell_type": "code",
    "execution_count": 163,
-   "id": "undefined-latin",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -888,7 +864,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "expensive-bangkok",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -896,9 +871,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tutorial_venv",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "tutorial_venv"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -910,7 +885,36 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.8.3"
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
