naive version title match

--- a/data/titles_analysis.ipynb
+++ b/data/titles_analysis.ipynb
@@ -4144,7 +4144,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "norman-favor",
+   "id": "smaller-controversy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4157,7 +4157,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "rational-being",
+   "id": "typical-physics",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4169,7 +4169,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "about-hunger",
+   "id": "ready-engineer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4191,7 +4191,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "integral-neutral",
+   "id": "diverse-third",
    "metadata": {},
    "outputs": [
     {
@@ -4212,7 +4212,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "suffering-depth",
+   "id": "continuing-google",
    "metadata": {},
    "outputs": [
     {
@@ -5234,7 +5234,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "pursuant-fight",
+   "id": "statistical-retailer",
    "metadata": {
     "scrolled": false
    },
@@ -5292,7 +5292,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "mechanical-coral",
+   "id": "baking-waste",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5302,7 +5302,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "valued-quest",
+   "id": "honest-parks",
    "metadata": {},
    "outputs": [
     {
@@ -5323,7 +5323,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "forty-tuner",
+   "id": "representative-portugal",
    "metadata": {},
    "outputs": [
     {
@@ -5341,7 +5341,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "tough-bathroom",
+   "id": "inclusive-developer",
    "metadata": {},
    "outputs": [
     {
@@ -5394,7 +5394,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "micro-turkish",
+   "id": "spread-namibia",
    "metadata": {},
    "outputs": [
     {
@@ -5537,7 +5537,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "urban-strategy",
+   "id": "organizational-september",
    "metadata": {},
    "outputs": [
     {
@@ -5565,8 +5565,199 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 101,
+   "id": "communist-istanbul",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "movie_title_filtered_df = os.path.join('movie_data', 'movie_title_filtered_df_3.csv')\n",
+    "\n",
+    "with open(movie_title_filtered_df, 'r') as f:\n",
+    "    df = pd.read_csv(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "id": "positive-portland",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>id</th>\n",
+       "      <th>imdb_id</th>\n",
+       "      <th>original_title</th>\n",
+       "      <th>filtered_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2033</th>\n",
+       "      <td>2263</td>\n",
+       "      <td>707</td>\n",
+       "      <td>tt0090264</td>\n",
+       "      <td>A View to a Kill</td>\n",
+       "      <td>a view a</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Unnamed: 0   id    imdb_id    original_title filtered_name\n",
+       "2033        2263  707  tt0090264  A View to a Kill      a view a"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df['filtered_name'] == 'a view a']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "id": "monetary-thing",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "same_titles = [\n",
+    "        \"max payne\",\n",
+    "        \"bleed\",\n",
+    "        \"slipstream\",\n",
+    "        \"sanctum\",\n",
+    "        \"detour\",\n",
+    "        \"hook\",\n",
+    "        \"bigfoot\",\n",
+    "        \"aragami\",\n",
+    "        \"dishonored\",\n",
+    "        \"ronin\",\n",
+    "        \"thief\",\n",
+    "        \"defiance\",\n",
+    "        \"edge\",\n",
+    "        \"kung fury\",\n",
+    "        \"ink\",\n",
+    "        \"the witness\",\n",
+    "        \"silence\",\n",
+    "        \"convoy\",\n",
+    "        \"proteus\",\n",
+    "        \"distance\",\n",
+    "        \"population zero\",\n",
+    "        \"artifact\",\n",
+    "        \"dusk\",\n",
+    "        \"nomad\",\n",
+    "        \"line of sight\",\n",
+    "        \"company of heroes\",\n",
+    "        \"the walking dead\",\n",
+    "        \"contagion\",\n",
+    "        \"the fall\",\n",
+    "        \"indie game: the movie\",\n",
+    "        \"shelter\",\n",
+    "        \"rush\",\n",
+    "        \"scum\",\n",
+    "        \"the void\",\n",
+    "        \"risen\",\n",
+    "        \"camera obscura\",\n",
+    "        \"remember me\",\n",
+    "        \"watchers\",\n",
+    "        \"sleeping dogs\",\n",
+    "        \"prey\",\n",
+    "        \"replica\",\n",
+    "        \"argo\",\n",
+    "        \"earthfall\",\n",
+    "        \"love\",\n",
+    "        \"resident evil\",\n",
+    "        \"wrecked\",\n",
+    "        \"postal\",\n",
+    "        \"yesterday\",\n",
+    "        \"daylight\",\n",
+    "        \"the evil within\",\n",
+    "        \"serena\",\n",
+    "        \"submerged\",\n",
+    "        \"the messenger\",\n",
+    "        \"despair\",\n",
+    "        \"mad max\",\n",
+    "        \"the vagrant\",\n",
+    "        \"we were here\",\n",
+    "        \"atlas\",\n",
+    "        \"rage\",\n",
+    "        \"desolate\",\n",
+    "        \"the forest\",\n",
+    "        \"uno\",\n",
+    "        \"crawl\",\n",
+    "        \"doom\",\n",
+    "        \"undefeated\",\n",
+    "        \"below\",\n",
+    "        \"house party\",\n",
+    "        \"detention\",\n",
+    "        \"inside\",\n",
+    "        \"limbo\",\n",
+    "        \"z\",\n",
+    "        \"the room\",\n",
+    "        \"deceit\",\n",
+    "        \"knights\",\n",
+    "        \"blockade\",\n",
+    "        \"snow\",\n",
+    "        \"paradigm\",\n",
+    "        \"toy soldiers\",\n",
+    "        \"home\",\n",
+    "        \"legendary\"\n",
+    "    ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "id": "maritime-enhancement",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'234140': 1.0,\n",
+       " '12140': 0.6666666666666666,\n",
+       " '257710': 0.6666666666666666,\n",
+       " 255390: 0.6666666666666666,\n",
+       " '204100': 0.5,\n",
+       " '12150': 0.3333333333333333}"
+      ]
+     },
+     "execution_count": 110,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "title_sim_val_as_app_id['max']"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "pleasant-fitting",
+   "id": "occasional-andrew",
    "metadata": {},
    "outputs": [],
    "source": []
