add title match

--- a/data/titles_analysis.ipynb
+++ b/data/titles_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 113,
    "id": "incorrect-extreme",
    "metadata": {},
    "outputs": [],
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 114,
    "id": "imperial-resistance",
    "metadata": {},
    "outputs": [],
@@ -483,151 +483,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 115,
    "id": "oriented-necklace",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>adult</th>\n",
-       "      <th>belongs_to_collection</th>\n",
-       "      <th>budget</th>\n",
-       "      <th>genres</th>\n",
-       "      <th>homepage</th>\n",
-       "      <th>id</th>\n",
-       "      <th>imdb_id</th>\n",
-       "      <th>original_language</th>\n",
-       "      <th>original_title</th>\n",
-       "      <th>overview</th>\n",
-       "      <th>...</th>\n",
-       "      <th>release_date</th>\n",
-       "      <th>revenue</th>\n",
-       "      <th>runtime</th>\n",
-       "      <th>spoken_languages</th>\n",
-       "      <th>status</th>\n",
-       "      <th>tagline</th>\n",
-       "      <th>title</th>\n",
-       "      <th>video</th>\n",
-       "      <th>vote_average</th>\n",
-       "      <th>vote_count</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>False</td>\n",
-       "      <td>{'id': 10194, 'name': 'Toy Story Collection', ...</td>\n",
-       "      <td>30000000</td>\n",
-       "      <td>[{'id': 16, 'name': 'Animation'}, {'id': 35, '...</td>\n",
-       "      <td>http://toystory.disney.com/toy-story</td>\n",
-       "      <td>862</td>\n",
-       "      <td>tt0114709</td>\n",
-       "      <td>en</td>\n",
-       "      <td>Toy Story</td>\n",
-       "      <td>Led by Woody, Andy's toys live happily in his ...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1995-10-30</td>\n",
-       "      <td>373554033.0</td>\n",
-       "      <td>81.0</td>\n",
-       "      <td>[{'iso_639_1': 'en', 'name': 'English'}]</td>\n",
-       "      <td>Released</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Toy Story</td>\n",
-       "      <td>False</td>\n",
-       "      <td>7.7</td>\n",
-       "      <td>5415.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>False</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>65000000</td>\n",
-       "      <td>[{'id': 12, 'name': 'Adventure'}, {'id': 14, '...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>8844</td>\n",
-       "      <td>tt0113497</td>\n",
-       "      <td>en</td>\n",
-       "      <td>Jumanji</td>\n",
-       "      <td>When siblings Judy and Peter discover an encha...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1995-12-15</td>\n",
-       "      <td>262797249.0</td>\n",
-       "      <td>104.0</td>\n",
-       "      <td>[{'iso_639_1': 'en', 'name': 'English'}, {'iso...</td>\n",
-       "      <td>Released</td>\n",
-       "      <td>Roll the dice and unleash the excitement!</td>\n",
-       "      <td>Jumanji</td>\n",
-       "      <td>False</td>\n",
-       "      <td>6.9</td>\n",
-       "      <td>2413.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>2 rows × 24 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "   adult                              belongs_to_collection    budget  \\\n",
-       "0  False  {'id': 10194, 'name': 'Toy Story Collection', ...  30000000   \n",
-       "1  False                                                NaN  65000000   \n",
-       "\n",
-       "                                              genres  \\\n",
-       "0  [{'id': 16, 'name': 'Animation'}, {'id': 35, '...   \n",
-       "1  [{'id': 12, 'name': 'Adventure'}, {'id': 14, '...   \n",
-       "\n",
-       "                               homepage    id    imdb_id original_language  \\\n",
-       "0  http://toystory.disney.com/toy-story   862  tt0114709                en   \n",
-       "1                                   NaN  8844  tt0113497                en   \n",
-       "\n",
-       "  original_title                                           overview  ...  \\\n",
-       "0      Toy Story  Led by Woody, Andy's toys live happily in his ...  ...   \n",
-       "1        Jumanji  When siblings Judy and Peter discover an encha...  ...   \n",
-       "\n",
-       "  release_date      revenue runtime  \\\n",
-       "0   1995-10-30  373554033.0    81.0   \n",
-       "1   1995-12-15  262797249.0   104.0   \n",
-       "\n",
-       "                                    spoken_languages    status  \\\n",
-       "0           [{'iso_639_1': 'en', 'name': 'English'}]  Released   \n",
-       "1  [{'iso_639_1': 'en', 'name': 'English'}, {'iso...  Released   \n",
-       "\n",
-       "                                     tagline      title  video vote_average  \\\n",
-       "0                                        NaN  Toy Story  False          7.7   \n",
-       "1  Roll the dice and unleash the excitement!    Jumanji  False          6.9   \n",
-       "\n",
-       "  vote_count  \n",
-       "0     5415.0  \n",
-       "1     2413.0  \n",
-       "\n",
-       "[2 rows x 24 columns]"
+       "Index(['adult', 'belongs_to_collection', 'budget', 'genres', 'homepage', 'id',\n",
+       "       'imdb_id', 'original_language', 'original_title', 'overview',\n",
+       "       'popularity', 'poster_path', 'production_companies',\n",
+       "       'production_countries', 'release_date', 'revenue', 'runtime',\n",
+       "       'spoken_languages', 'status', 'tagline', 'title', 'video',\n",
+       "       'vote_average', 'vote_count'],\n",
+       "      dtype='object')"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "movie_data_df.head(2)"
+    "movie_data_df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "id": "solved-tampa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('adult', 'False'), ('belongs_to_collection', \"{'id': 119050, 'name': 'Grumpy Old Men Collection', 'poster_path': '/nLvUdqgPgm3F85NMCii9gVFUcet.jpg', 'backdrop_path': '/hypTnLot2z8wpFS7qwsQHW1uV8u.jpg'}\"), ('budget', '0'), ('genres', \"[{'id': 10749, 'name': 'Romance'}, {'id': 35, 'name': 'Comedy'}]\"), ('homepage', nan), ('id', '15602'), ('imdb_id', 'tt0113228'), ('original_language', 'en'), ('original_title', 'Grumpier Old Men'), ('overview', \"A family wedding reignites the ancient feud between next-door neighbors and fishing buddies John and Max. Meanwhile, a sultry Italian divorcée opens a restaurant at the local bait shop, alarming the locals who worry she'll scare the fish away. But she's less interested in seafood than she is in cooking up a hot time with Max.\"), ('popularity', 11.7129), ('poster_path', '/6ksm1sjKMFLbO7UY2i6G1ju9SML.jpg'), ('production_companies', \"[{'name': 'Warner Bros.', 'id': 6194}, {'name': 'Lancaster Gate', 'id': 19464}]\"), ('production_countries', \"[{'iso_3166_1': 'US', 'name': 'United States of America'}]\"), ('release_date', '1995-12-22'), ('revenue', 0.0), ('runtime', 101.0), ('spoken_languages', \"[{'iso_639_1': 'en', 'name': 'English'}]\"), ('status', 'Released'), ('tagline', 'Still Yelling. Still Fighting. Still Ready for Love.'), ('title', 'Grumpier Old Men'), ('video', False), ('vote_average', 6.5), ('vote_count', 92.0)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(list(zip(movie_data_df.columns, movie_data_df.values[2])))"
    ]
   },
   {
@@ -4144,7 +4040,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "smaller-controversy",
+   "id": "dramatic-ministry",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4157,7 +4053,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "typical-physics",
+   "id": "sonic-yahoo",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4169,7 +4065,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "ready-engineer",
+   "id": "lesbian-accident",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4191,7 +4087,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "diverse-third",
+   "id": "gorgeous-attraction",
    "metadata": {},
    "outputs": [
     {
@@ -4212,7 +4108,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "continuing-google",
+   "id": "vietnamese-tonight",
    "metadata": {},
    "outputs": [
     {
@@ -5234,7 +5130,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "statistical-retailer",
+   "id": "elementary-valve",
    "metadata": {
     "scrolled": false
    },
@@ -5292,7 +5188,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "baking-waste",
+   "id": "auburn-water",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5302,7 +5198,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "honest-parks",
+   "id": "british-small",
    "metadata": {},
    "outputs": [
     {
@@ -5323,7 +5219,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "representative-portugal",
+   "id": "found-province",
    "metadata": {},
    "outputs": [
     {
@@ -5341,7 +5237,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "inclusive-developer",
+   "id": "hollow-fifteen",
    "metadata": {},
    "outputs": [
     {
@@ -5394,7 +5290,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "spread-namibia",
+   "id": "interested-anime",
    "metadata": {},
    "outputs": [
     {
@@ -5537,7 +5433,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "organizational-september",
+   "id": "higher-greek",
    "metadata": {},
    "outputs": [
     {
@@ -5566,7 +5462,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "communist-istanbul",
+   "id": "funded-sapphire",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5579,7 +5475,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "positive-portland",
+   "id": "medium-stadium",
    "metadata": {},
    "outputs": [
     {
@@ -5640,7 +5536,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "monetary-thing",
+   "id": "induced-formula",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5731,7 +5627,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "maritime-enhancement",
+   "id": "constant-aspect",
    "metadata": {},
    "outputs": [
     {
@@ -5757,7 +5653,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "occasional-andrew",
+   "id": "experienced-uniform",
    "metadata": {},
    "outputs": [],
    "source": []
