[title][working version] change imdb to rotten tomato

--- a/data/titles_analysis.ipynb
+++ b/data/titles_analysis.ipynb
@@ -510,20 +510,137 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
-   "id": "solved-tampa",
+   "execution_count": 121,
+   "id": "institutional-henry",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>adult</th>\n",
+       "      <th>belongs_to_collection</th>\n",
+       "      <th>budget</th>\n",
+       "      <th>genres</th>\n",
+       "      <th>homepage</th>\n",
+       "      <th>id</th>\n",
+       "      <th>imdb_id</th>\n",
+       "      <th>original_language</th>\n",
+       "      <th>original_title</th>\n",
+       "      <th>overview</th>\n",
+       "      <th>...</th>\n",
+       "      <th>release_date</th>\n",
+       "      <th>revenue</th>\n",
+       "      <th>runtime</th>\n",
+       "      <th>spoken_languages</th>\n",
+       "      <th>status</th>\n",
+       "      <th>tagline</th>\n",
+       "      <th>title</th>\n",
+       "      <th>video</th>\n",
+       "      <th>vote_average</th>\n",
+       "      <th>vote_count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>22718</th>\n",
+       "      <td>False</td>\n",
+       "      <td>{'id': 325470, 'name': 'The Lego Movie Collect...</td>\n",
+       "      <td>60000000</td>\n",
+       "      <td>[{'id': 12, 'name': 'Adventure'}, {'id': 16, '...</td>\n",
+       "      <td>http://www.thelegomovie.com</td>\n",
+       "      <td>137106</td>\n",
+       "      <td>tt1490017</td>\n",
+       "      <td>en</td>\n",
+       "      <td>The Lego Movie</td>\n",
+       "      <td>An ordinary Lego mini-figure, mistakenly thoug...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2014-02-06</td>\n",
+       "      <td>469160692.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>[{'iso_639_1': 'en', 'name': 'English'}]</td>\n",
+       "      <td>Released</td>\n",
+       "      <td>The story of a nobody who saved everybody.</td>\n",
+       "      <td>The Lego Movie</td>\n",
+       "      <td>False</td>\n",
+       "      <td>7.5</td>\n",
+       "      <td>3127.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1 rows × 24 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       adult                              belongs_to_collection    budget  \\\n",
+       "22718  False  {'id': 325470, 'name': 'The Lego Movie Collect...  60000000   \n",
+       "\n",
+       "                                                  genres  \\\n",
+       "22718  [{'id': 12, 'name': 'Adventure'}, {'id': 16, '...   \n",
+       "\n",
+       "                          homepage      id    imdb_id original_language  \\\n",
+       "22718  http://www.thelegomovie.com  137106  tt1490017                en   \n",
+       "\n",
+       "       original_title                                           overview  ...  \\\n",
+       "22718  The Lego Movie  An ordinary Lego mini-figure, mistakenly thoug...  ...   \n",
+       "\n",
+       "      release_date      revenue runtime  \\\n",
+       "22718   2014-02-06  469160692.0   100.0   \n",
+       "\n",
+       "                               spoken_languages    status  \\\n",
+       "22718  [{'iso_639_1': 'en', 'name': 'English'}]  Released   \n",
+       "\n",
+       "                                          tagline           title  video  \\\n",
+       "22718  The story of a nobody who saved everybody.  The Lego Movie  False   \n",
+       "\n",
+       "      vote_average vote_count  \n",
+       "22718          7.5     3127.0  \n",
+       "\n",
+       "[1 rows x 24 columns]"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movie_data_df[movie_data_df['original_title'] == 'The Lego Movie']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "id": "according-chest",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[('adult', 'False'), ('belongs_to_collection', \"{'id': 119050, 'name': 'Grumpy Old Men Collection', 'poster_path': '/nLvUdqgPgm3F85NMCii9gVFUcet.jpg', 'backdrop_path': '/hypTnLot2z8wpFS7qwsQHW1uV8u.jpg'}\"), ('budget', '0'), ('genres', \"[{'id': 10749, 'name': 'Romance'}, {'id': 35, 'name': 'Comedy'}]\"), ('homepage', nan), ('id', '15602'), ('imdb_id', 'tt0113228'), ('original_language', 'en'), ('original_title', 'Grumpier Old Men'), ('overview', \"A family wedding reignites the ancient feud between next-door neighbors and fishing buddies John and Max. Meanwhile, a sultry Italian divorcée opens a restaurant at the local bait shop, alarming the locals who worry she'll scare the fish away. But she's less interested in seafood than she is in cooking up a hot time with Max.\"), ('popularity', 11.7129), ('poster_path', '/6ksm1sjKMFLbO7UY2i6G1ju9SML.jpg'), ('production_companies', \"[{'name': 'Warner Bros.', 'id': 6194}, {'name': 'Lancaster Gate', 'id': 19464}]\"), ('production_countries', \"[{'iso_3166_1': 'US', 'name': 'United States of America'}]\"), ('release_date', '1995-12-22'), ('revenue', 0.0), ('runtime', 101.0), ('spoken_languages', \"[{'iso_639_1': 'en', 'name': 'English'}]\"), ('status', 'Released'), ('tagline', 'Still Yelling. Still Fighting. Still Ready for Love.'), ('title', 'Grumpier Old Men'), ('video', False), ('vote_average', 6.5), ('vote_count', 92.0)]\n"
+      "[('adult', 'False'), ('belongs_to_collection', \"{'id': 325470, 'name': 'The Lego Movie Collection', 'poster_path': '/hsBJxdgF1BK1M98dWAaikvTlym7.jpg', 'backdrop_path': '/sQNiamRBTh2aTjQ8aYCJ69MngTM.jpg'}\"), ('budget', '60000000'), ('genres', \"[{'id': 12, 'name': 'Adventure'}, {'id': 16, 'name': 'Animation'}, {'id': 35, 'name': 'Comedy'}, {'id': 10751, 'name': 'Family'}, {'id': 14, 'name': 'Fantasy'}]\"), ('homepage', 'http://www.thelegomovie.com'), ('id', '137106'), ('imdb_id', 'tt1490017'), ('original_language', 'en'), ('original_title', 'The Lego Movie'), ('overview', 'An ordinary Lego mini-figure, mistakenly thought to be the extraordinary MasterBuilder, is recruited to join a quest to stop an evil Lego tyrant from gluing the universe together.'), ('popularity', 16.418133), ('poster_path', '/lMHbadNmznKs5vgBAkHxKGHulOa.jpg'), ('production_companies', \"[{'name': 'Village Roadshow Pictures', 'id': 79}, {'name': 'DC Comics', 'id': 429}, {'name': 'Vertigo Entertainment', 'id': 829}, {'name': 'Lin Pictures', 'id': 2723}, {'name': 'Warner Bros. Animation', 'id': 2785}, {'name': 'LEGO', 'id': 4081}, {'name': 'Warner Bros.', 'id': 6194}, {'name': 'Animal Logic', 'id': 8089}, {'name': 'Warner Animation Group', 'id': 25120}, {'name': 'RatPac-Dune Entertainment', 'id': 41624}]\"), ('production_countries', \"[{'iso_3166_1': 'US', 'name': 'United States of America'}]\"), ('release_date', '2014-02-06'), ('revenue', 469160692.0), ('runtime', 100.0), ('spoken_languages', \"[{'iso_639_1': 'en', 'name': 'English'}]\"), ('status', 'Released'), ('tagline', 'The story of a nobody who saved everybody.'), ('title', 'The Lego Movie'), ('video', False), ('vote_average', 7.5), ('vote_count', 3127.0)]\n"
      ]
     }
    ],
    "source": [
-    "print(list(zip(movie_data_df.columns, movie_data_df.values[2])))"
+    "print(list(zip(movie_data_df.columns, movie_data_df.values[22718])))"
    ]
   },
   {
@@ -4040,7 +4157,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "dramatic-ministry",
+   "id": "front-tunisia",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4053,7 +4170,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "sonic-yahoo",
+   "id": "reduced-highland",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4065,7 +4182,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "lesbian-accident",
+   "id": "intense-valve",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4087,7 +4204,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "gorgeous-attraction",
+   "id": "derived-inspector",
    "metadata": {},
    "outputs": [
     {
@@ -4108,7 +4225,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "vietnamese-tonight",
+   "id": "artistic-siemens",
    "metadata": {},
    "outputs": [
     {
@@ -5130,7 +5247,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "elementary-valve",
+   "id": "otherwise-trinidad",
    "metadata": {
     "scrolled": false
    },
@@ -5188,7 +5305,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "auburn-water",
+   "id": "musical-stream",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5198,7 +5315,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "british-small",
+   "id": "greater-document",
    "metadata": {},
    "outputs": [
     {
@@ -5219,7 +5336,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "found-province",
+   "id": "adverse-blocking",
    "metadata": {},
    "outputs": [
     {
@@ -5237,7 +5354,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "hollow-fifteen",
+   "id": "korean-theater",
    "metadata": {},
    "outputs": [
     {
@@ -5290,7 +5407,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "interested-anime",
+   "id": "apart-glucose",
    "metadata": {},
    "outputs": [
     {
@@ -5433,7 +5550,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "higher-greek",
+   "id": "forty-washer",
    "metadata": {},
    "outputs": [
     {
@@ -5462,7 +5579,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "funded-sapphire",
+   "id": "collect-cartridge",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5475,7 +5592,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "medium-stadium",
+   "id": "mighty-uniform",
    "metadata": {},
    "outputs": [
     {
@@ -5536,7 +5653,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "induced-formula",
+   "id": "extreme-relaxation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5627,7 +5744,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "constant-aspect",
+   "id": "fancy-membership",
    "metadata": {},
    "outputs": [
     {
@@ -5653,10 +5770,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "experienced-uniform",
+   "id": "renewable-animal",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "'/Users/susan/Development/cs4300sp2021-cw887-qh75-rz92-yc687-yl698/data/steamData/80k_data/inv_game_name_simplified.json'"
+   ]
   }
  ],
  "metadata": {
