temporarily remove desc keywords for movies

--- a/data/reviews/keyword_match.ipynb
+++ b/data/reviews/keyword_match.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 324,
    "metadata": {},
    "outputs": [
     {
@@ -34,6 +34,38 @@
     "from collections import Counter\n",
     "\n",
     "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 326,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'Percy Jackson & the Olympians: The Lightning Thief', 'genre': ['drama', 'action & adventure', 'comedy', 'science fiction & fantasy'], 'content_rating': 'PG', 'audience_count': 254421.0, 'review_keywords': ['presence', 'hydra', 'crass', 'hogwarts', 'game', 'product', 'spectacle', 'effect', 'parent', 'spectacular', 'book', 'sequel', 'lerman', 'franchise', 'harry', 'pace', 'pierce', 'scale', 'brosnan', 'family', 'market', 'adventure', 'mouth', 'channel', 'premise', 'affection', 'band', 'forgettable', 'knockoff', 'special', 'olympian', 'episodic', 'uma', 'series', 'sequence', 'fantastic', 'formula', 'mythology', 'percy', 'medusa', 'thief', 'rick', 'enjoyable', 'lightning', 'coogan', 'motion', 'escapist', 'gaze', 'magic', 'myth', 'visual', 'skill', 'standard', 'cover', 'agreeable', 'kid', 'flick', 'issue', 'thurman', 'approach', 'wooden', 'choice', 'adult', 'sense', 'dullness', 'action', 'setpieces', 'age', 'decent', 'cgi', 'likeable', 'surprise', 'drama', 'safe', 'child', 'titan', 'fantasy', 'threat', 'clash', 'adaptation', 'teen', 'mythical', 'chris', 'jackson', 'modern', 'complete', 'greek', 'mythological', 'columbus', 'epic', 'bland', 'humour', 'complex', 'god', 'young', 'imaginative', 'classical', 'riordan', 'silliness', 'potter', 'break', 'ray', 'clunky'], 'review_keyphrases': ['harry potter', 'percy jackson', 'greek mythology', 'special effects', 'chris columbus', 'jackson olympians', 'uma thurman', 'rick riordan', 'greek gods', 'fantasy adventure', 'jackson harry', 'clash titans', 'set pieces', 'ray harryhausen', 'fantasy film', 'pierce brosnan', 'thurman medusa', 'steve coogan', 'potter movies', 'potter franchise', 'olympians sounds', 'columbus adaptation', 'great fun', 'escapist adventure', 'family adventure', 'greek myth', 'action adventure']}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# remove desc keywords for now\n",
+    "with open('/Users/viviancai/Desktop/cs4300/cs4300sp2021-cw887-qh75-rz92-yc687-yl698/app/data/movie_info.json', 'r', encoding='utf8') as in_json_file:\n",
+    "    movie_info = json.load(in_json_file)\n",
+    "\n",
+    "\n",
+    "counter=0\n",
+    "for (k, item) in list(movie_info.items()):\n",
+    "    item.pop('desc_keywords')\n",
+    "    if counter==0:\n",
+    "        print(item)\n",
+    "        counter+=1\n",
+    "    movie_info[k] = item\n",
+    "\n",
+    "output_path = '/Users/viviancai/Desktop/cs4300/cs4300sp2021-cw887-qh75-rz92-yc687-yl698/app/data/movie_info2.json'\n",
+    "with open(output_path, 'w') as f:\n",
+    "    f.write(json.dumps(movie_info, indent=4)+'\\n')"
    ]
   },
   {
