--- a/Search/Movie_Game_Matching.ipynb
+++ b/Search/Movie_Game_Matching.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-04-16T19:00:13.572424Z",
-     "start_time": "2021-04-16T19:00:13.287193Z"
+     "end_time": "2021-04-18T15:29:45.304398Z",
+     "start_time": "2021-04-18T15:29:44.882716Z"
     }
    },
    "outputs": [],
@@ -23,8 +23,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-04-16T19:00:13.576774Z",
-     "start_time": "2021-04-16T19:00:13.574302Z"
+     "end_time": "2021-04-18T15:29:45.372813Z",
+     "start_time": "2021-04-18T15:29:45.370223Z"
     }
    },
    "outputs": [],
@@ -37,8 +37,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-04-16T19:00:13.694603Z",
-     "start_time": "2021-04-16T19:00:13.579029Z"
+     "end_time": "2021-04-18T15:29:46.574535Z",
+     "start_time": "2021-04-18T15:29:46.448859Z"
     }
    },
    "outputs": [],
@@ -54,8 +54,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-04-16T19:00:13.718646Z",
-     "start_time": "2021-04-16T19:00:13.698971Z"
+     "end_time": "2021-04-18T15:29:47.019001Z",
+     "start_time": "2021-04-18T15:29:46.997863Z"
     }
    },
    "outputs": [
@@ -80,8 +80,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-04-16T19:00:13.725210Z",
-     "start_time": "2021-04-16T19:00:13.722878Z"
+     "end_time": "2021-04-18T15:29:47.588588Z",
+     "start_time": "2021-04-18T15:29:47.585467Z"
     }
    },
    "outputs": [
@@ -103,8 +103,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-04-16T19:00:13.777774Z",
-     "start_time": "2021-04-16T19:00:13.726903Z"
+     "end_time": "2021-04-18T15:29:48.113167Z",
+     "start_time": "2021-04-18T15:29:48.056899Z"
     }
    },
    "outputs": [],
@@ -118,8 +118,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-04-16T19:00:13.799051Z",
-     "start_time": "2021-04-16T19:00:13.780503Z"
+     "end_time": "2021-04-18T15:29:48.614564Z",
+     "start_time": "2021-04-18T15:29:48.590277Z"
     }
    },
    "outputs": [
@@ -155,8 +155,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-04-16T19:00:13.810648Z",
-     "start_time": "2021-04-16T19:00:13.800379Z"
+     "end_time": "2021-04-18T15:29:50.023136Z",
+     "start_time": "2021-04-18T15:29:50.010981Z"
     }
    },
    "outputs": [],
@@ -198,7 +198,7 @@
     "            mat[i, j] = np.min(arr)\n",
     "    return mat[x, y]\n",
     "            \n",
-    "def Most_Similar_Movies(query, mvt_inv_index=mvt_inv_index, movie_names=movie_names_lower, k=5):\n",
+    "def Most_Similar_Movies(query, mvt_inv_index=mvt_inv_index, movie_names=movie_names, k=5):\n",
     "    \"\"\"\n",
     "    select the backup movies with at least one identical token\n",
     "    return the kth movie (idx, score, mv_name) with smallest edit distance\n",
@@ -217,15 +217,15 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-04-16T19:00:13.819062Z",
-     "start_time": "2021-04-16T19:00:13.812177Z"
+     "end_time": "2021-04-18T15:29:50.812629Z",
+     "start_time": "2021-04-18T15:29:50.802272Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "9.0"
+       "7.0"
       ]
      },
      "execution_count": 9,
@@ -242,19 +242,19 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-04-16T19:00:13.845349Z",
-     "start_time": "2021-04-16T19:00:13.820436Z"
+     "end_time": "2021-04-18T15:30:55.170684Z",
+     "start_time": "2021-04-18T15:30:55.139442Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(1464, 6.0, 'hostage'),\n",
-       " (12438, 9.0, 'rescue dawn'),\n",
-       " (11880, 17.0, 'planes: fire and rescue'),\n",
-       " (6734, 17.0, 'free willy 3: the rescue'),\n",
-       " (3970, 22.0, 'brave little toaster to the rescue')]"
+       "[(1464, 6.0, 'Hostage'),\n",
+       " (12438, 11.0, 'Rescue Dawn'),\n",
+       " (6734, 17.0, 'Free Willy 3: The Rescue'),\n",
+       " (11880, 19.0, 'Planes: Fire And Rescue'),\n",
+       " (3970, 20.0, 'Brave Little Toaster to the Rescue')]"
       ]
      },
      "execution_count": 10,
@@ -275,14 +275,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-04-16T19:00:15.701054Z",
-     "start_time": "2021-04-16T19:00:13.846847Z"
+     "end_time": "2021-04-18T15:58:25.712402Z",
+     "start_time": "2021-04-18T15:58:25.154836Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '../data/steamData/80k_data/id_to_info.json'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-13-ef370470b4e8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"../data/steamData/80k_data/inv_game_desc_keywords.json\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m     \u001b[0mgame_desc_inv_idx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mjson\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 18\u001b[0;31m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"../data/steamData/80k_data/id_to_info.json\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     19\u001b[0m     \u001b[0mgame_info\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mjson\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0mdict_game_id_to_name\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0mgame_info\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'name'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mgame_info\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '../data/steamData/80k_data/id_to_info.json'"
+     ]
+    }
+   ],
    "source": [
     "with open(\"../data/steamData/80k_data/inv_game_genre.json\") as f:\n",
     "    game_genre_inv_idx = json.load(f)\n",
@@ -312,8 +324,8 @@
    "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-04-16T19:00:16.154127Z",
-     "start_time": "2021-04-16T19:00:15.897891Z"
+     "end_time": "2021-04-18T15:58:26.806851Z",
+     "start_time": "2021-04-18T15:58:26.616253Z"
     }
    },
    "outputs": [],
@@ -337,8 +349,8 @@
    "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-04-16T19:00:16.157780Z",
-     "start_time": "2021-04-16T19:00:16.155431Z"
+     "end_time": "2021-04-18T15:58:27.604445Z",
+     "start_time": "2021-04-18T15:58:27.601985Z"
     }
    },
    "outputs": [],
@@ -350,31 +362,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-04-16T19:00:53.142740Z",
-     "start_time": "2021-04-16T19:00:53.138922Z"
+     "end_time": "2021-04-18T15:58:28.440888Z",
+     "start_time": "2021-04-18T15:58:28.436450Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['action',\n",
-       " 'indie',\n",
-       " 'mmo',\n",
+       "['mmo',\n",
        " 'strategy',\n",
+       " 'action',\n",
+       " 'indie',\n",
        " 'sports',\n",
        " 'party-game',\n",
-       " 'open-world',\n",
-       " 'simulation',\n",
        " 'role-playing',\n",
+       " 'simulation',\n",
+       " 'open-world',\n",
        " 'adventure',\n",
        " 'boardgame']"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -385,11 +397,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-04-16T19:00:16.200872Z",
-     "start_time": "2021-04-16T19:00:16.159110Z"
+     "end_time": "2021-04-18T15:58:31.092257Z",
+     "start_time": "2021-04-18T15:58:31.047661Z"
     }
    },
    "outputs": [],
